# floating_body_hydro

./: .gitignore  PDstrip.md  README.md  hw07.md  pdstripy.py  pyproject.toml
.github/workflows/: ci.yml
destroyer/: destroyer.stl  make_destroyer_hull.py
spheroid/: spheroid_6_1.3dm  spheroid_6_1.ipynb  spheroid_6_1.stl
spheroid/pdstrip_run/: geomet.out  pdstrip.inp  pdstrip.out  relativemotions  responsefunctions  sectionresults
tests/: conftest.py  test_capytaine_comparison.py  test_parse_errors.py  test_parse_helpers.py  test_pdstrip_run_integration.py
tests/data/parse_errors/: responsefunctions_section_mismatch  responsefunctions_short_rows  responsefunctions_truncated  sectionresults_incomplete_block  sectionresults_three_blocks_declared_two_freq  sectionresults_truncated
tests/data/spheroid/pdstrip_run/: pdstrip.out  sectionresults
